# IP-Manager-Full

./: .gitignore  README.md
AppGate-Dashboard/: index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
IP-Manager/: .gitignore  CMakeLists.txt  FirewallManager.cpp  FirewallManager.h  LICENSE  Models.h  README.md  Utils.cpp  Utils.h  main.cpp  usage.md  whitelist.txt
